--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.2",
+    "motion": "^12.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
